--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nalgebra = "0.32.3"
+quote = "1.0.35"
+syn = { version = "2.0.48", features = ["full"] }
+
+[lib]
+proc_macro = true
