--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.32.3"
+prettyplease = "0.2.16"
 quote = "1.0.35"
-syn = { version = "2.0.48", features = ["full"] }
+syn = { version = "2.0.48", features = ["full", "extra-traits"] }
+
 
 [lib]
 proc_macro = true
