--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
         "punct"
+    ],
+    "rust-analyzer.linkedProjects": [
+        "./einsum-impl/Cargo.toml",
+        "./einsum_impl/Cargo.toml",
+        "./einsum_impl/Cargo.toml"
     ]
 }
