--- a/einsum_impl/Cargo.toml
+++ b/einsum_impl/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 prettyplease = "0.2.16"
-pyo3 = { version = "0.20.2" }
+proc-macro2 = "1.0.78"
 quote = "1.0.35"
+regex-macro = "0.2.0"
 syn = { version = "2.0.48", features = ["full", "extra-traits"] }
 
 
