--- a/einsum_impl/Cargo.toml
+++ b/einsum_impl/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num-traits = "0.2.18"
 prettyplease = "0.2.16"
 proc-macro2 = "1.0.78"
 quote = "1.0.35"
