--- a/einsum_impl/Cargo.toml
+++ b/einsum_impl/Cargo.toml
@@ -2,6 +2,8 @@
 name = "einsum_impl"
 version = "0.1.0"
 edition = "2021"
+license = "ISC"
+description = "Macro crate impl for `einsum`"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
