--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/Case-Rocket-Team/einsum"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-einsum_impl = { path = "./einsum_impl" }
+einsum_impl = { path = "./einsum_impl", version = "0.1.1" }
 ndarray = "0.15.6"
 num-traits = "0.2.18"
 rust-numpy = "0.1.0"
